--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,20 @@
+spring:
+  datasource:
+    platform: postgresql
+    initialization-mode: always
+    url: jdbc:postgresql://localhost:5432/data
+    username: postgres
+    password: admin
+    driver-class-name: org.postgresql.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      maximum-pool-size: 1
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties.hibernate.temp.use_jdbc_metadata_defaults: false
+
 
 bars:
   download: D:/data/bars
