--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
+    show-sql: true
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
+  mvc:
+    view:
+      prefix: /view/
+      suffix: .html
 
 
 bars:
