--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       maximum-pool-size: 1
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
   mvc:
@@ -22,3 +22,6 @@ spring:
 
 bars:
   download: D:/data/bars
+
+server:
+  port: 8080
