add 3 new source(cafe, restaurants, coffeehouses), some changes in view

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,35 @@
       "name": "bars.download",
       "type": "java.lang.String",
       "description": "bars download folder"
-  }
-] }
+    },
+    {
+      "name": "cafe.download",
+      "type": "java.lang.String",
+      "description": "Description for cafe.download."
+    },
+    {
+      "name": "seda.aggregation",
+      "type": "java.lang.String",
+      "description": "Description for seda.aggregation."
+    },
+    {
+      "name": "seda.aggregation.threads",
+      "type": "java.lang.String",
+      "description": "Description for seda.aggregation.threads."
+    },
+    {
+      "name": "seda.aggregation.size",
+      "type": "java.lang.String",
+      "description": "Description for seda.aggregation.size."
+    },
+    {
+      "name": "restaraunts.download",
+      "type": "java.lang.String",
+      "description": "Description for restaraunts.download."
+    },
+    {
+      "name": "coffeehouses.download",
+      "type": "java.lang.String",
+      "description": "Description for coffeehouses.download."
+    }
+  ] }
