init mvc rework

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       maximum-pool-size: 1
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     show-sql: true
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
   mvc:
